[project]
name = "sekai-live2d-updater"
version = "0.1.0"
description = "Fetch and update Live2D for Project Sekai Colorful Stage"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aiohttp==3.11.16",
    "anyio==4.9.0",
    "orjson==3.10.16",
    "pillow==11.1.0",
    "pycryptodome==3.22.0",
    "u-msgpack-python==2.8.0",
    "unitypy==1.21.3",
]
